--- a/Code/style_projet.css
+++ b/Code/style_projet.css
@@ -1,7 +1,58 @@
-header{
-    color: purple;
-    background-image: url(https://pbs.twimg.com/media/C0a0j09W8AAgdix.jpg);
+#header_home_page{
+    color: white;
+    background-color: purple;
     background-repeat: no-repeat;
     position: relative;
-    
+    text-align: center;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+a{
+    color: currentColor
+}
+
+#span_header_1{
+    background-color:rgb(0, 0, 0);
+    padding: 1dvh;
+    border: solid;
+    border-color: rgb(255, 255, 255);
+    position: relative;
+    right: 10dvh;
+    border-radius: 10px;
+}
+
+#span_header_2{
+    background-color: rgb(255, 255, 255);
+    color: black;
+    padding: 1dvh;
+    border: solid;
+    border-color: rgb(0, 0, 0);
+    border-radius: 10px;
+}
+
+#span_header_3{
+    background-color: rgb(0, 0, 0);
+    padding: 1dvh;
+    border: solid;
+    border-color: rgb(255, 255, 255);
+    position: relative;
+    left: 10dvh;
+    border-radius: 10px;
+}
+
+#article_home_page{
+    background-color: blue;
+    background-size: auto;
+    color: white;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-top: solid;
+    border-color: black;
+}
+
+#span_intro, #intro{
+    position: relative;
+    text-align: center;
+    left: 3dvh;
 }
