--- a/Code/style_projet.css
+++ b/Code/style_projet.css
@@ -1,3 +1,4 @@
+
 #header_home_page{
     color: white;
     background-color: purple;
@@ -55,4 +56,11 @@ a{
     position: relative;
     text-align: center;
     left: 3dvh;
+}
+
+
+nav{
+    background-color: purple;
+    padding: 10px;
+    border-radius: 10px;
 }
