--- a/Code/style_projet.css
+++ b/Code/style_projet.css
@@ -3,14 +3,21 @@ body{
     background-color: rgb(0, 255, 255);
 }
 
+a{
+    text-decoration: none;
+}
+
+#body_index{
+    background-image: url(https://images.wallpapersden.com/image/download/jojo-s-bizarre-adventure-all-star-battle-r-4k-gaming-poster_bmZmZ22UmZqaraWkpJRobWllrWdma2U.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 #header_home_page{
     color: white;
-    background-color: purple;
-    background-repeat: no-repeat;
     position: relative;
     text-align: center;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
 }
 
 a{
@@ -47,12 +54,7 @@ a{
 }
 
 #article_home_page{
-    background-color: blue;
-    background-size: auto;
     color: white;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    border-top: solid;
     border-color: black;
 }
 
@@ -185,25 +187,34 @@ nav{
     border-radius: 15px;
 }
 
+#img_part_cover{
+    position: sticky;
+    top: 0;
+    z-index: -1;
+}
 
 
-#texte_part{
+p, h2, h1{
     text-align: center;
 }
 
 #img_part{
     display: flex;
-    justify-content: center; /* Centrage horizontal */
-    align-items: center;     /* Centrage vertical (optionnel) */
+    justify-content: space-around;
+    align-items: center;    
+    flex-wrap: wrap; 
 }
 
+
+
 #img_aspect{
-    max-width: 100%;  /* Empêche l'image de dépasser la largeur de l'écran */
-    height: auto;     /* Conserve les proportions */
+    max-width: 100%; 
+    height: auto;   
     border: solid;
     border-radius: 15px;
     background-color: white;
 }
+
 
 
 
